--- a/token_classification.ipynb
+++ b/token_classification.ipynb
@@ -2,24 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from transformers import AutoTokenizer\n",
-    "import ast"
+    "from transformers import BertTokenizerFast\n",
+    "import ast\n",
+    "import torch"
    ]
   },
   {
@@ -31,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +139,7 @@
        "4  ['O', 'O', 'O', 'O', 'O', 'O', 'O', 'O', 'O', ...  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +185,7 @@
        " 'O'}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,50 +203,50 @@
    "source": [
     "## Prefixes\n",
     "\n",
-    "B - prefix indicates the beginning of a named entity. <br>\n",
-    "I - prefix indicates that the token is inside a named entity. <br>\n",
-    "O - indicates that the token is not a named entity. <br>\n",
+    "`B` - prefix indicates the beginning of a named entity. <br>\n",
+    "`I` - prefix indicates that the token is inside a named entity. <br>\n",
+    "`O` - indicates that the token is not a named entity. <br>\n",
     "<br>\n",
     "\n",
     "## Suffixes\n",
-    "art: Artifacts, e.g., books, songs, etc.<br>\n",
-    "eve: Events, e.g., battles, elections, holidays, etc.<br>\n",
-    "geo: Geographical entities, e.g., cities, rivers, countries, etc.<br>\n",
-    "gpe: Geopolitical entities, e.g., cities, states, countries.<br>\n",
-    "nat: Natural phenomena, e.g., hurricanes, earthquakes.<br>\n",
-    "org: Organizations, e.g., companies, government organizations, etc.<br>\n",
-    "per: Persons.<br>\n",
-    "tim: Time indicators, e.g., dates, days, months, etc."
+    "`art` Artifacts, e.g., books, songs, etc.<br>\n",
+    "`eve` Events, e.g., battles, elections, holidays, etc.<br>\n",
+    "`geo` Geographical entities, e.g., cities, rivers, countries, etc.<br>\n",
+    "`gpe` Geopolitical entities, e.g., cities, states, countries.<br>\n",
+    "`nat` Natural phenomena, e.g., hurricanes, earthquakes.<br>\n",
+    "`org` Organizations, e.g., companies, government organizations, etc.<br>\n",
+    "`per` Persons.<br>\n",
+    "`tim` Time indicators, e.g., dates, days, months, etc."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'I-eve': 0,\n",
-       " 'B-per': 1,\n",
-       " 'B-tim': 2,\n",
-       " 'B-nat': 3,\n",
+       "{'I-tim': 0,\n",
+       " 'B-nat': 1,\n",
+       " 'I-per': 2,\n",
+       " 'I-art': 3,\n",
        " 'I-gpe': 4,\n",
-       " 'I-per': 5,\n",
-       " 'I-nat': 6,\n",
-       " 'I-tim': 7,\n",
-       " 'B-eve': 8,\n",
-       " 'O': 9,\n",
-       " 'I-org': 10,\n",
-       " 'B-geo': 11,\n",
-       " 'I-art': 12,\n",
-       " 'B-org': 13,\n",
-       " 'B-art': 14,\n",
+       " 'B-geo': 5,\n",
+       " 'B-org': 6,\n",
+       " 'I-nat': 7,\n",
+       " 'I-geo': 8,\n",
+       " 'B-eve': 9,\n",
+       " 'O': 10,\n",
+       " 'B-tim': 11,\n",
+       " 'I-eve': 12,\n",
+       " 'B-art': 13,\n",
+       " 'I-org': 14,\n",
        " 'B-gpe': 15,\n",
-       " 'I-geo': 16}"
+       " 'B-per': 16}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +282,7 @@
        "'of'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,15 +293,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'input_ids': tensor([[  101,  5190,  1997, 28337,  2031,  9847,  2083,  2414,  2000,  6186,\n",
-       "          1996,  2162,  1999,  5712,  1998,  5157,  1996, 10534,  1997,  2329,\n",
-       "          3629,  2013,  2008,  2406,  1012,   102,     0,     0,     0,     0,\n",
+       "{'input_ids': tensor([[  101,  1996,  2283,  2003,  4055,  2058,  3725,  1005,  1055,  6577,\n",
+       "          1999,  1996,  5712,  4736,  1998,  1996,  2506, 10813,  1997,  1022,\n",
+       "          1010,  3156,  2329,  3629,  1999,  2008,  2406,  1012,   102,     0,\n",
        "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
        "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
        "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
@@ -325,22 +317,22 @@
        "         0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
        "         0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
        "         0, 0, 0, 0, 0, 0, 0, 0]]), 'attention_mask': tensor([[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "         1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "         1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
        "         0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
        "         0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
        "         0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
        "         0, 0, 0, 0, 0, 0, 0, 0]])}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tokenizer = AutoTokenizer.from_pretrained('bert-base-uncased')\n",
+    "tokenizer = BertTokenizerFast.from_pretrained('bert-base-uncased')\n",
     "\n",
-    "tokens = tokenizer(df['Sentence'][0], padding='max_length', truncation=True, max_length=128, return_tensors='pt')\n",
+    "tokens = tokenizer(df['Sentence'][5], padding='max_length', truncation=True, max_length=128, return_tensors='pt')\n",
     "\n",
     "tokens"
    ]
@@ -358,30 +350,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-02-12 12:06:43.246905: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "'[CLS] thousands of demonstrators have marched through london to protest the war in iraq and demand the withdrawal of british troops from that country. [SEP] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD]'"
+       "\"[CLS] the party is divided over britain's participation in the iraq conflict and the continued deployment of 8, 500 british troops in that country. [SEP] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD]\""
       ]
      },
-     "execution_count": 9,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "tokenizer.decode(tokens['input_ids'][0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "subword tokenizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['[CLS]', 'the', 'party', 'is', 'divided', 'over', 'britain', \"'\", 's', 'participation', 'in', 'the', 'iraq', 'conflict', 'and', 'the', 'continued', 'deployment', 'of', '8', ',', '500', 'british', 'troops', 'in', 'that', 'country', '.', '[SEP]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]']\n",
+      "[None, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None]\n"
+     ]
+    }
+   ],
+   "source": [
+    "word_ids = tokens.word_ids()\n",
+    "print(tokenizer.convert_ids_to_tokens(tokens[\"input_ids\"][0]))\n",
+    "print(word_ids)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Problem: Model operates at token (sub-word) level and includes special tokens but the labels are provided at the word level with no special tokens<br>\n",
+    "Solution: Align labels with tokens by creating new list of labels that correspond to the tokenized inputs.<br>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def tokenize_and_align_labels(sentence, tags):\n",
+    "    tokenized_input = tokenizer(sentence, padding='max_length', truncation=True, max_length=128, return_tensors='pt')\n",
+    "    word_ids = tokenized_input.word_ids()\n",
+    "    labels = []\n",
+    "    j = 0\n",
+    "    for i in word_ids:\n",
+    "        if i is None: # If the word id is None (Special token)\n",
+    "            labels.append(-100) # Ignore the label\n",
+    "        elif i == j:\n",
+    "            labels.append(label_to_id[tags[j]])\n",
+    "            j += 1\n",
+    "        else: # If the word is a subword\n",
+    "            labels.append(-100) # Ignore the label\n",
+    "    return tokenized_input, torch.tensor(labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class DataSequence(torch.utils.data.Dataset):\n",
+    "    def __init__(self, df):\n",
+    "        raw_labels = set(df['Tag'].explode().unique()) \n",
+    "        raw_texts = df['Sentence'].values.tolist()\n",
+    "        \n",
+    "        self.texts = [tokenizer(str(text), padding='max_length', truncation=True, max_length=128, return_tensors='pt') for text in raw_texts]\n",
+    "        self.labels = [tokenize_and_align_labels(sent, tag) for sent, tag in zip(raw_texts, raw_labels)]\n",
+    "    \n",
+    "    def __len__(self):\n",
+    "        return len(self.labels)\n",
+    "    \n",
+    "    def get_batch_text(self, idx):\n",
+    "        return self.texts[idx]\n",
+    "    \n",
+    "    def get_batch_labels(self, idx):\n",
+    "        return torch.LongTensor(self.labels[idx])\n",
+    "    \n",
+    "    def __getitem__(self, idx):\n",
+    "        return self.get_batch_text(idx), self.get_batch_labels(idx)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train, val, test = np.split(df.sample(frac=1,random_state=2002), [int(.8*len(df)), int(.9*len(df))])"
    ]
   }
  ],
